--- a/index.html
+++ b/index.html
@@ -3,41 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FilmsHub</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Ma Collection de Films</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+
+    <!-- Header -->
     <header>
-        <div class="logo">FilmsHub</div>
+        <h1>Bienvenue dans Ma Collection de Films</h1>
         <nav>
-            <ul>
-                <li><a href="#">Accueil</a></li>
-                <li><a href="#">Films</a></li>
-                <li><a href="#">Séries</a></li>
-                <li><a href="#">Nouveautés</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+            <a href="#">Accueil</a>
+            <a href="ajouterFilm.html">Ajouter un Film</a>
+            <a href="#">Liste des Films</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
 
-    <section class="banner">
-        <h1>Bienvenue sur FilmsHub</h1>
-        <p>Découvrez les derniers films et séries en streaming</p>
-        <a href="#" class="btn">Voir les films populaires</a>
-    </section>
+    <!-- Main (Contenu principal) -->
+    <main>
+        <section>
+            
+        </section>
+    </main>
 
-    <section class="popular-movies">
-        <h2>Films Populaires</h2>
-        <div class="movies-container">
-            <div class="movie-card"><img src="https://via.placeholder.com/150" alt="Film 1"><h3>Film 1</h3></div>
-            <div class="movie-card"><img src="https://via.placeholder.com/150" alt="Film 2"><h3>Film 2</h3></div>
-            <div class="movie-card"><img src="https://via.placeholder.com/150" alt="Film 3"><h3>Film 3</h3></div>
-            <div class="movie-card"><img src="https://via.placeholder.com/150" alt="Film 4"><h3>Film 4</h3></div>
-        </div>
-    </section>
-
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2023 FilmsHub. Tous droits réservés.</p>
+        <p>&copy; 2024 Ma Collection de Films. Tous droits réservés.</p>
     </footer>
+
 </body>
 </html>
