--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="#">Accueil</a>
             <a href="ajouterFilm.html">Ajouter un Film</a>
-            <a href="#">Liste des Films</a>
+            <a href="listeFilms.html">Liste des Films</a>
             <a href="#">Contact</a>
         </nav>
     </header>
